rewrite deprecated constructor.