@@ -203,7 +203,7 @@ public class AssemblyCode implements cflat.sysdep.AssemblyCode {
     }
 
     void _size(Symbol sym, long size) {
-        _size(sym, new Long(size).toString());
+        _size(sym, Long.valueOf(size).toString());
     }
 
     void _size(Symbol sym, String size) {
